change research activity buttons to be 48px on mobile, 37px on desktop - also adjusted homepage research activity button breakpoint to fix Firefox problems

--- a/src/app/components/home/research-activity/research-activity.component.scss
+++ b/src/app/components/home/research-activity/research-activity.component.scss
@@ -10,12 +10,22 @@
 *   reworded)
 */
 
-$home-ra-chip-list-wrap-breakpoint: 1023px;
+$home-ra-chip-list-wrap-breakpoint: 1040px;
 
 .ra-chip-container {
     margin-left: inherit;
     margin-right: inherit;
+
+    mat-chip {
+      height: $ra-chip-height;
+    }
+
+    mat-chip.sm {
+      // Make button size bigger on mobile devices so touch users can use them.
+      height: $ra-chip-height-touch;
+    }
 }
+
 
 @media screen and (min-width:$home-ra-chip-list-wrap-breakpoint) {
     .ra-chip-container {
