--- a/src/research-activity.scss
+++ b/src/research-activity.scss
@@ -10,6 +10,8 @@ $color-create-bg: #2f99cc;
 $color-analyze-bg: #329a37;
 $color-publish-bg: #f49717;
 $color-discover-bg: #cd3234;
+$ra-chip-height: 37px;
+$ra-chip-height-touch: 48px;
 
 .ra-chip-container {
   margin-bottom: $ra-chip-margin;
